[package]
name = "meowed-away"
version = "0.1.0"
edition = "2021"
authors = ["Chaya <chaya@example.com>"]
description = "Don't Get Meowed Away"
license = "MIT/Apache-2.0"
repository = "https://github.com/coplat/meowed-away"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "console"] }
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
console_error_panic_hook = "0.1"
